Mejoras visuales y responsive destacables.

--- a/app/src/main/res/layout/app_portada.xml
+++ b/app/src/main/res/layout/app_portada.xml
@@ -18,7 +18,8 @@
             android:layout_height="0dp"
             android:src="@drawable/imagen_portada"
             android:scaleType="centerCrop"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="90dp"
+            android:elevation="20dp"
             app:layout_constraintWidth_percent="0.5"
             app:layout_constraintHeight_percent="0.4"
             app:layout_constraintBottom_toTopOf="@+id/textView"
@@ -27,17 +28,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/radius"/>
 
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/titulo_portada"
-            android:textSize="50sp"
-            android:textStyle="bold"
+            android:textSize="60sp"
             android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="@font/extrabold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagen_portada" />
@@ -50,7 +49,7 @@
             android:text="@string/subtitulo_portada"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="sans-serif-condensed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -59,7 +58,7 @@
             android:id="@+id/btnInicio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="70dp"
             android:layout_marginStart="80dp"
             android:layout_marginEnd="80dp"
             android:padding="15dp"
@@ -75,7 +74,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/pregunta_portada"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-condensed"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +87,8 @@
             android:layout_height="48dp"
             android:gravity="center"
             android:text="@string/registro_portada"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4"
