--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -14,8 +14,9 @@
         android:layout_marginTop="72dp"
         android:text="@string/txt_contactanos"
         android:textColor="@color/black"
-        android:textSize="46sp"
+        android:textSize="48sp"
         android:textStyle="bold"
+        android:fontFamily="@font/extrabold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,7 @@
         android:id="@+id/imgcontactollamar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="50dp"
         android:onClick="llamar"
         android:src="@drawable/ic_phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,20 +38,22 @@
         android:id="@+id/btnLlamar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="@string/btn_llamar"
-        android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="-20dp"
+        android:background="@android:color/transparent"
+        android:textSize="40sp"
         app:layout_constraintTop_toBottomOf="@id/imgcontactollamar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/cairo"
+        android:textStyle="bold"/>
 
     <ImageView
         android:id="@+id/imgcontactocorreo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/ic_mail"
+        android:src="@drawable/email_ico"
         android:scaleType="centerInside"
         android:onClick="correoEnviar"
         app:layout_constraintTop_toBottomOf="@id/btnLlamar"
@@ -61,10 +64,13 @@
         android:id="@+id/btnCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="@string/btn_contactar_correo"
-        android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:layout_marginTop="-10dp"
+        android:fontFamily="@font/cairo"
+        android:textStyle="bold"
+        android:background="@android:color/transparent"
         app:layout_constraintTop_toBottomOf="@id/imgcontactocorreo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -73,11 +79,12 @@
         android:id="@+id/txtfixit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="-10dp"
         android:text="@string/fixit_tittle"
         android:textColor="@color/black"
-        android:textSize="46sp"
+        android:textSize="60sp"
         android:textStyle="bold"
+        android:fontFamily="@font/extrabold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnCorreo" />
@@ -88,14 +95,16 @@
         android:layout_height="wrap_content"
         android:text="@string/servicios_a_domicilio"
         android:textColor="@color/black"
+        android:layout_marginTop="-20dp"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/txtfixit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtslogan"
-        android:layout_width="wrap_content"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/txt_slogan_help"
